VERSION:	0.9.1
DETAILS:	-Created new global php variable 'PHPPYTHON' for GEOparse
		-Created NEWS file for update listing