@@ -649,7 +649,7 @@ e range"><i class="fa fa-calendar"></i></button>
 			<div class="small box-header">
 				<h4 class="box-title">Selected Samples</h3>
 			</div>
-			<div class="small box-body table-responsive non-padding">
+			<div class="small box-body table-responsive non-padding" style="overflow:;overflow-y:hidden">
 				<table id="dolphin_basket" class="table table-hover">
 				<thead>
 					<tr>
